# NovaSDR

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
config/: receivers.json
crates/interop/: Cargo.toml  build.rs  opus_wrapper.c  opus_wrapper.h
crates/interop/src/: opus.rs
crates/novasdr-core/: Cargo.toml
crates/novasdr-core/src/: config.rs
crates/novasdr-core/src/dsp/: clfft.rs  fft.rs
crates/novasdr-core/tests/: config.rs  json_config.rs  runtime.rs  runtime_defaults.rs
crates/novasdr-server/: Cargo.toml
crates/novasdr-server/src/: dsp_runner.rs  main.rs  registration.rs  setup.rs
crates/novasdr-server/src/ws/: audio.rs
crates/ws_probe/: Cargo.toml
